--- a/src/card_interactions/templates/resources.html
+++ b/src/card_interactions/templates/resources.html
@@ -22,7 +22,7 @@
                 </a>
                     {% if resource.owner == request.user %}
                     by you
-                            <button type="button" hx-confirm="Are you sure you wish to delete this resource?" hx-target="#resources" hx-swap="outerHTML" hx-DELETE="/card/{{ id }}/resource/{{resource.id}}/delete/" class="py-2.5 px-5 m-4 mr-2 mb-2 text-xs font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
+                            <button type="button" hx-indicator="#spinner" hx-confirm="Are you sure you wish to delete this resource?" hx-target="#resources" hx-swap="outerHTML" hx-DELETE="/card/{{ id }}/resource/{{resource.id}}/delete/" class="py-2.5 px-5 m-4 mr-2 mb-2 text-xs font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
                                 <i class="fa-regular fa-trash"></i><br> 
                             </button>
                     {% else %}
