--- a/src/dashboard/templates/grid_zoom_in.html
+++ b/src/dashboard/templates/grid_zoom_in.html
@@ -73,46 +73,46 @@
     }
 </style>
 
-<div hx-get="/dashboard/update" hx-target="#grid" hx-trigger="every 4s" hx-swap="morphdom"></div>
+<div hx-get="/dashboard/update" hx-indicator="#spinner" hx-target="#grid" hx-trigger="every 4s" hx-swap="morphdom"></div>
 <div id="drawer"></div>
 <div style="z-index: 999;" id="modal"></div>
 <div id="grid" class="gridmain">
-        <form class="gridcontainer sortable" hx-post="/dashboard/update" hx-trigger="end">
+        <form class="gridcontainer sortable" hx-indicator="#spinner" hx-post="/dashboard/update" hx-trigger="end">
         {% for card in cards %}
         {% if card.cardtype == 'empty' %}
-            <div class="hexagonhidden" hx-get="/card/{{ card.id }}/create" hx-trigger="click" hx-target="#modal"><input type='hidden' name='item' value='{{ card.id}}'/>   
+            <div class="hexagonhidden" hx-indicator="#spinner" hx-get="/card/{{ card.id }}/create" hx-trigger="click" hx-target="#modal"><input type='hidden' name='item' value='{{ card.id}}'/>   
                 <i class="fa-regular fa-2xl fa-plus"></i><br>         
             </div>
         {% elif card.cardtype == 'ambition' %}
-            <div class="hexagon" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background: #000000; color: #fff"><input type='hidden' name='item' value='{{ card.id}}'/>            
+            <div class="hexagon" hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background: #000000; color: #fff"><input type='hidden' name='item' value='{{ card.id}}'/>            
                 <i class="fa-solid fa-xl fa-eye"></i><br>
                 {{ card.title|truncatechars:20}}
                 <img class="w-10 h-10 rounded-full" src="{{card.author.avatar_url}}">
                 {{ card.author.first_name|truncatechars:20}}
             </div>
         {% elif card.cardtype == 'challenge' %}E6799D
-            <div class="hexagon" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background: #E6799D;"><input type='hidden' name='item' value='{{ card.id}}'/>            
+            <div class="hexagon"  hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background: #E6799D;"><input type='hidden' name='item' value='{{ card.id}}'/>            
                 <i class="fa-regular fa-xl fa-mountain"></i><br>
                 {{ card.title|truncatechars:20}}
                 <img class="w-10 h-10 rounded-full" src="{{card.author.avatar_url}}">
                 {{ card.author.first_name|truncatechars:20}}
             </div>
         {% elif card.cardtype == 'idea' %}
-            <div class="hexagon"  hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background: #51c1ff;"><input type='hidden' name='item' value='{{ card.id}}'/>            
+            <div class="hexagon"  hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background: #51c1ff;"><input type='hidden' name='item' value='{{ card.id}}'/>            
                 <i class="fa-regular fa-lightbulb fa-xl"></i><br>
                 {{ card.title|truncatechars:20}}
                 <img class="w-10 h-10 rounded-full" src="{{card.author.avatar_url}}">
                 {{ card.author.first_name|truncatechars:20}}
             </div>
         {% elif card.cardtype == 'pro' %}
-            <div class="hexagon"  hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background: #ffeb39;"><input type='hidden' name='item' value='{{ card.id}}'/>            
+            <div class="hexagon" hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background: #ffeb39;"><input type='hidden' name='item' value='{{ card.id}}'/>            
                 <i class="fa-solid fa-circle-up fa-xl"></i><br>
                 {{ card.title|truncatechars:20}}
                 <img class="w-10 h-10 rounded-full" src="{{card.author.avatar_url}}">
                 {{ card.author.first_name|truncatechars:20}}
             </div>
             {% elif card.cardtype == 'con' %}
-            <div class="hexagon" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background: red;"><input type='hidden' name='item' value='{{ card.id}}'/>            
+            <div class="hexagon" hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background: red;"><input type='hidden' name='item' value='{{ card.id}}'/>            
                 <i class="fa-solid fa-circle-down fa-xl"></i><br>
                 {{ card.title|truncatechars:20}}
                 <img class="w-10 h-10 rounded-full" src="{{card.author.avatar_url}}">
