--- a/src/users/templates/user_profile_table_edit.html
+++ b/src/users/templates/user_profile_table_edit.html
@@ -1,4 +1,4 @@
-<form hx-post="profile/{{user.id}}/edit" hx-target="this" hx-swap="outerHTML">
+<form hx-post="profile/{{user.id}}/edit" hx-indicator="#spinner" hx-target="this" hx-swap="outerHTML">
 <dl id="table">
     <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
       <dt class="text-sm font-medium text-gray-500">First name</dt>
