--- a/src/workshop/templates/workshop_settings.html
+++ b/src/workshop/templates/workshop_settings.html
@@ -105,7 +105,7 @@
             <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Workshop details</h2>
         </div>
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
-        <div hx-target="this" hx-swap="outerHTML" class="border-t border-gray-200 ">
+        <div hx-target="this" hx-indicator="#spinner" hx-swap="outerHTML" class="border-t border-gray-200 ">
             {% include 'workshop_details.html' with workshop=workshop participants=participants %}
             <button hx-get="profile/{{user.id}}/edit" class="m-4 inline-flex items-center px-4 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" >
                 Click To Edit
