--- a/src/dashboard/templates/grid_zoom_standard.html
+++ b/src/dashboard/templates/grid_zoom_standard.html
@@ -80,8 +80,9 @@
         <form class="gridcontainer sortable" hx-indicator="#spinner" hx-post="/dashboard/update" hx-trigger="end">
         {% for card in cards %}
         {% if card.cardtype == 'empty' %}
-            <div class="hexagonhidden" hx-indicator="#spinner" hx-get="/card/{{ card.id }}/create" hx-trigger="click" hx-target="#modal"><input type='hidden' name='item' value='{{ card.id}}'/>   
-                <i class="fa-regular fa-2xl fa-plus"></i><br>         
+            <div class="hexagonhidden flex items-center"  hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/create"><input type='hidden' name='item' value='{{ card.id}}'/>            
+                <i class="fa-regular fa-2xl fa-plus"></i><br>
+                <b>New</b>       
             </div>
         {% elif card.cardtype == 'ambition' %}
             <div class="hexagon" hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background: #000000; color: #fff"><input type='hidden' name='item' value='{{ card.id}}'/>            
