--- a/src/theme/templates/base.html
+++ b/src/theme/templates/base.html
@@ -53,7 +53,7 @@
         }, 5000); // <-- time in milliseconds, 1000 =  1 sec
     });
 </script>
-<body style="background-color: aliceblue;" class="leading-normal tracking-normal text-grey-800 gradient" style="font-family: 'Source Sans Pro', sans-serif;" >
+<body id="main" style="background-color: aliceblue;" class="leading-normal tracking-normal text-grey-800 gradient" style="font-family: 'Source Sans Pro', sans-serif;" >
 	{% if messages %}
 	<ul class="messages">
 		{% for message in messages %}
