--- a/src/dashboard/templates/dashboard_index.html
+++ b/src/dashboard/templates/dashboard_index.html
@@ -17,8 +17,8 @@
   <label for="large-range" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Set zoom </label>
   <input id="large-range" min="1" max="10" value='10' step="1" onchange="showVal(this.value)" type="range" class="w-40 h-3 bg-gray-200 rounded-lg appearance-none cursor-pointer range-lg dark:bg-gray-700"/>
 --> 
-  <div class="h-[600px]" style="display: inline-block">
-    <div id="zoom" class="h-[600px]">
+  <div style="display: inline-block">
+    <div id="zoom">
       {% if zoomlevel == '0' %}
         {% include 'grid_zoom_standard.html' with cards=cards %}
       {% elif zoomlevel == '1' %}
