--- a/src/theme/templates/base.html
+++ b/src/theme/templates/base.html
@@ -1,6 +1,6 @@
 {% load static tailwind_tags %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="min-height: 100%;">
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -219,29 +219,29 @@
 	</script>
 	<script>
 		document.body.addEventListener('htmx:configRequest', (event) => {
-		  event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}';
+		event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}';
 		})
-	  </script>
-	  <script src="https://unpkg.com/htmx.org@1.8.6" integrity="sha384-Bj8qm/6B+71E6FQSySofJOUjA/gq330vEqjFx9LakWybUySyI1IQHwPtbTU7bNwx" crossorigin="anonymous"></script>
-	  <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
-	  
-	  
-	  <script>
-	  htmx.onLoad(function(content) {
-		  var sortables = content.querySelectorAll(".sortable");
-		  for (var i = 0; i < sortables.length; i++) {
-			var sortable = sortables[i];
-			new Sortable(sortable, {
-			  animation: 150,
-			  ghostClass: 'blue-background-class',
-			  multiDrag: true, // Enable multi-drag
-			  selectedClass: 'selected', // The class applied to the selected items
-			  fallbackTolerance: 3, // So that we can select items on mobile
-			  swap: true, // Enable swap plugin
-			  swapClass: 'highlight',
-			});
-		  }
-	  })
-	  </script>
+	</script>
+	<script src="https://unpkg.com/htmx.org@1.8.6" integrity="sha384-Bj8qm/6B+71E6FQSySofJOUjA/gq330vEqjFx9LakWybUySyI1IQHwPtbTU7bNwx" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
+	
+	
+	<script>
+	htmx.onLoad(function(content) {
+		var sortables = content.querySelectorAll(".sortable");
+		for (var i = 0; i < sortables.length; i++) {
+		var sortable = sortables[i];
+		new Sortable(sortable, {
+			animation: 150,
+			ghostClass: 'blue-background-class',
+			multiDrag: true, // Enable multi-drag
+			selectedClass: 'selected', // The class applied to the selected items
+			fallbackTolerance: 3, // So that we can select items on mobile
+			swap: true, // Enable swap plugin
+			swapClass: 'highlight',
+		});
+		}
+	})
+	</script>
 </body>
 </html>
