fixed position of legend

--- a/src/dashboard/templates/grid_zoom_standard.html
+++ b/src/dashboard/templates/grid_zoom_standard.html
@@ -4,6 +4,7 @@
         --s: 100px;  /* size  */
         --m: 1px;    /* margin */
         --f: calc(1.732 * var(--s) + 4 * var(--m)  - 1px);
+        margin-bottom: 100px;
     }
 
     .gridcontainer {
