--- a/src/dashboard/templates/legend.html
+++ b/src/dashboard/templates/legend.html
@@ -1,7 +1,6 @@
 
 
-
-    <div class="my-4 space-y-3 absolute  z-50 bottom-10 left-10">
+    <div style="position:absolute; top:10%; left: 25px; position: fixed;">
         <div class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
             <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Legend</h5>
             <ul>
