stuck navbar to top of screen

--- a/src/dashboard/templates/grid_zoom_in.html
+++ b/src/dashboard/templates/grid_zoom_in.html
@@ -5,7 +5,7 @@
         --s: 200px;  /* size  */
         --m: 1px;    /* margin */
         --f: calc(1.732 * var(--s) + 4 * var(--m)  - 1px);
-        padding-bottom: 50px;
+        padding: 100px;
 
     }
 
