--- a/src/theme/templates/base.html
+++ b/src/theme/templates/base.html
@@ -66,7 +66,7 @@
 	
 
 <!--Nav-->	
-<nav class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 rounded dark:bg-gray-900">
+<nav class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 rounded dark:bg-gray-900" style="z-index: 10000; position:absolute; width: 100%; top:0px; left: 0px; position: fixed;">
 <div class="container flex flex-wrap items-center justify-between mx-auto">
 	{% if user.is_authenticated%}
 	<a href="/dashboard" class="flex items-center">
