added share button functionality

--- a/src/card_interactions/templates/resources.html
+++ b/src/card_interactions/templates/resources.html
@@ -41,5 +41,7 @@
                 <p class="ml-auto text-xs text-gray-500 dark:text-gray-400">No resources, add one!</p>
         {% endfor %}        
     </ul>
+    {% if user.is_authenticated %}
     <button hx-get="/card/{{ id }}/resource/create" hx-trigger="click" hx-target="#modal" class="px-3 py-2 my-2 text-xs font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">add  resource</button>
+    {% endif %}
 </div>
