--- a/src/dashboard/templates/legend.html
+++ b/src/dashboard/templates/legend.html
@@ -33,15 +33,15 @@
                     <h5>Ambition</h5>
                 </span>
             </ul>
-            
+            {% if user.is_authenticated%}
             <h5 class="mb-2 text-xl font-bold tracking-tight text-gray-900 dark:text-white">Zoom </h5> 
-
             <div class="flex">
                 <button hx-get="/dashboard/zoom_out"
                 hx-trigger="click" hx-target="#zoom" hx-indicator="#spinner" hx-swap="innerHTML" type="button" class="py-2.5 px-5 mr-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">-</button>
                 <button hx-get="/dashboard/zoom_in"
                 hx-trigger="click" hx-target="#zoom" hx-indicator="#spinner" hx-swap="innerHTML" type="button" class="py-2.5 px-5 mr-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">+</button>
             </div>
+            {% endif %}
         </div>
     </div>
 
