--- a/src/card_interactions/templates/new_description.html
+++ b/src/card_interactions/templates/new_description.html
@@ -1,6 +1,10 @@
 <div hx-target="this"  hx-swap="outerHTML" class="justify-between">
+    {% if user.is_authenticated %}
     <div hx-get="/card/{{ id }}/edit/description" hx-indicator="#spinner">
+    {% endif %}
     <p >{{ description }}</p>
+    {% if user.is_authenticated %}
     </div>
     <button hx-get="/card/{{ id }}/edit/description" hx-indicator="#spinner" class="px-3 py-2 my-2 text-xs font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">edit description</button>
+    {% endif %}
 </div>
