--- a/src/card_interactions/templates/new_title.html
+++ b/src/card_interactions/templates/new_title.html
@@ -4,7 +4,11 @@
     }       
     </style>
 <div hx-target="this" hx-indicator="#spinner"  hx-swap="innerHTML" class="justify-between">
+{% if user.is_authenticated %}    
 <div hx-get="/card/{{ id }}/edit/title">
+{% else %}
+<div>
+{% endif %}
     {% if type == 'ambition' %}
     <div style="background: #000000; cursor: pointer; color: #fff" class="w-full max-w bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
     <div class="flex flex-col align-text-top items-center m-8">
@@ -56,8 +60,9 @@
             </div>            
 {% endif %}
 
+{% if user.is_authenticated %}
 </div>
     <button hx-indicator="#spinner" hx-get="/card/{{ id }}/edit/title" class="px-3 ml-4 py-2 my-2 text-xs font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">edit title</button>
 </div>
-
+{% endif %}
 
