--- a/src/theme/templates/base.html
+++ b/src/theme/templates/base.html
@@ -72,7 +72,7 @@
 	<a href="/dashboard" class="flex items-center">
 		<img src="{% static '/images/mapmaker_logo.png' %}" class="h-6 mr-3 sm:h-9" alt="mapmaker Logo" />
 	</a>
-	<a href="/user/register/{{workshop_secret}}">
+	<a href="/workshop/share/{{workshop_secret}}">
 		<button type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Share</button>
 	</a>
 	{% else %}
@@ -80,7 +80,7 @@
 	<a href="/dashboard/guest/{{workshop_secret}}" class="flex items-center">
 		<img src="{% static '/images/mapmaker_logo.png' %}" class="h-6 mr-3 sm:h-9" alt="mapmaker Logo" />
 	</a>
-	<a href="/user/register/{{workshop_secret}}">
+	<a href="/workshop/share/{{workshop_secret}}">
 		<button type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Share</button>
 	</a>
 	{% else%}
@@ -88,7 +88,7 @@
 		<img src="{% static '/images/mapmaker_logo.png' %}" class="h-6 mr-3 sm:h-9" alt="mapmaker Logo" />
 	</a>
 	{% if workshop_secret %}
-	<a href="/user/register/{{workshop_secret}}">
+	<a href="/workshop/share/{{workshop_secret}}">
 		<button type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Share</button>
 	</a>
 	{% endif %}
