--- a/src/workshop/templates/workshop_share.html
+++ b/src/workshop/templates/workshop_share.html
@@ -1,23 +1,26 @@
 {% extends "base.html" %}
-{% block title %}Register account{% endblock %}
+{% block title %}Share {{workshop}}{% endblock %}
 
 {% block content %}
 
 <div class="flex min-h-full items-center justify-center py-40 px-4 sm:px-6 lg:px-8 bg">
 <div class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow">
     <div>
-    <h1 class="mt-6 text-center text-3xl font-bold tracking-tight text-gray-800">Share {{workshop}} with others</h1>
+    <h1 class="mt-6 text-3xl font-bold tracking-tight text-gray-800">Share {{workshop}}</h1>
+    <br>
 
     </div>
-    <p>Anyone with the link to the workshop can view it's content, so be careful who you share it with. In order to make edits you need to create a account. </p>
+    <p>Share {{workshop}} with others in your organisation, all they need is this link.</p>
     <div>
-        <input type="text" value="https://mapmaker.nl/dashboard/guest/{{workshop_secret}}" id="myInput" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
         <br>
-        <br>
+        <input type="text" readonly value="https://mapmaker.nl/dashboard/guest/{{workshop_secret}}" id="myInput" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+
         <button  onclick="copyurltoclipboard()" class="group relative flex w-full justify-center rounded-md border border-transparent bg-indigo-700 py-2 px-4 text-sm font-medium text-white hover:bg-indigo-400 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
         Copy link to {{workshop}} to your clipboard
         </button>
-        <br>
+        <p id="helper-text-explanation" class="mt-2 text-sm text-gray-500 dark:text-gray-400">Beware: anyone with this link can view your workshop.</p>
+
+        <br><br>
     <a href="/user/register/{{workshop_secret}}">
     <button  class="group relative flex w-full justify-center rounded-md py-2.5 px-5 mr-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
             Create a account for {{workshop}}
